--- a/package.json
+++ b/package.json
@@ -15,14 +15,23 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "oyster-db": "*",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "ion-cortex": "^1.3.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
+    "mongoose": "^9.2.1",
     "nanoid": "^3.3.2",
+    "oyster-db": "*",
     "qantra-pineapple": "^1.0.7",
     "request-ip": "^2.1.3",
     "useragent": "^2.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^10.0.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.5",
+    "prettier": "^3.8.1"
   }
 }
